# JimakuGen

./: .gitignore  GEMINI.md  README.md  main.py  media_utils.py  pyproject.toml  requirements.txt  subtitle_extractor.py
sample/: Houseki_no_Kuni_02.ja.generated.srt  Yofukashi_no_Uta_01.ja.generated.srt  houseki_context.txt
src/: cli.py  config.py  context_generator.py  core.py  logger.py  media_utils.py  transcriber.py  utils.py
tests/: test_regression.py  test_retry.py  test_subtitle_extraction.py
tests/expected/: city_01.txt  dangers_01.txt  houseki_01.txt  keppeki_01.txt  rod_01.txt  saigo_13.txt  tougen_23.txt  yofukashi_01.txt
tests/fixtures/: city_01.ass  dangers_01.ass  houseki_01.ass  rod_01.ass  saigo_13.ass  tougen_23.ass  yofukashi_01.ass
