[project]
name = "JimakuGen"
version = "0.1.0"
description = "AI-powered Japanese subtitle generator using English context"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai",
    "python-dotenv",
    "pysubs2",
    "typer",
    "rich",
    "wikipedia",
]

[project.scripts]
jimakugen = "src.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
venvPath = "."
venv = ".venv"
